{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 158,
  "lineage": "d64d4b78-1d4e-c6f3-60e2-92233aaf345e",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:346084543109:loadbalancer/app/wordpress-alb/ad757c14af2c9c18",
            "arn_suffix": "app/wordpress-alb/ad757c14af2c9c18",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-wordpress-alb-828797763.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:346084543109:loadbalancer/app/wordpress-alb/ad757c14af2c9c18",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a7012f9f3c4faced"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0036397839d5bb832"
              },
              {
                "subnet_id": "subnet-0dce73fe96aba9e76"
              }
            ],
            "subnets": [
              "subnet-0036397839d5bb832",
              "subnet-0dce73fe96aba9e76"
            ],
            "tags": {
              "Name": "wordpress-alb"
            },
            "tags_all": {
              "Name": "wordpress-alb"
            },
            "vpc_id": "vpc-03109186db6390738",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ecs.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:346084543109:listener/app/wordpress-alb/ad757c14af2c9c18/3aaf9335df5af94f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:346084543109:targetgroup/wordpress-tg/af66f803a0645f07",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:346084543109:listener/app/wordpress-alb/ad757c14af2c9c18/3aaf9335df5af94f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:346084543109:loadbalancer/app/wordpress-alb/ad757c14af2c9c18",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.application_load_balancer",
            "module.ecs.aws_lb_target_group.target_group",
            "module.ecs.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:346084543109:targetgroup/wordpress-tg/af66f803a0645f07",
            "arn_suffix": "targetgroup/wordpress-tg/af66f803a0645f07",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:346084543109:targetgroup/wordpress-tg/af66f803a0645f07",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "wordpress-lb-tg"
            },
            "tags_all": {
              "Name": "wordpress-lb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03109186db6390738"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:346084543109:security-group/sg-0a7012f9f3c4faced",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7012f9f3c4faced",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230308065215294400000001",
            "name_prefix": "terraform-",
            "owner_id": "346084543109",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-sg"
            },
            "tags_all": {
              "Name": "wordpress-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03109186db6390738"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:346084543109:security-group/sg-0c8ab223eedeb39d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8ab223eedeb39d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a7012f9f3c4faced"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230308065217453900000002",
            "name_prefix": "terraform-",
            "owner_id": "346084543109",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-service-sg"
            },
            "tags_all": {
              "Name": "wordpress-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03109186db6390738"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_efs_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:346084543109:security-group/sg-0078cd8735f70cecf",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0078cd8735f70cecf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "allow-efs",
            "name_prefix": "",
            "owner_id": "346084543109",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03109186db6390738"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}